[tool.poetry]
name = "imessagechatextracter"
version = "0.1.0"
description = ""
authors = ["TechnoTalksDev <technotalksyt101@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
